--- a/main.html
+++ b/main.html
@@ -89,7 +89,7 @@
 <script>
 async function init() {
     // host URL
-    const url = 'file:///Users/andy/Assignments/DataViz/Activities/Final_Project'
+    const url = 'https://arr11-uiuc.github.io'
 
     // read data
     data = await d3.csv("https://raw.githubusercontent.com/arr11-uiuc/dv/refs/heads/main/data/main_viz.csv");
